package org.example.Ex44.Base;

public class Product {
    private String name;
    private Double price;
    private int quantity;

    public String getName() {
        return name;
    }



    public Double getPrice() {
        return price;
    }



    public int getQuantity() {
        return quantity;
    }


}
